<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/background_color"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:text="@string/calculate_your"
        android:textColor="@color/purple_500"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="175dp"
        tools:layout_editor_absoluteY="81dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:padding="10dp"
        android:background="@color/purple_500"
        android:text="@string/age"
        android:textColor="#FFFFFF"
        android:textSize="21sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:text="@string/in_minutes"
        android:textColor="@color/purple_500"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="175dp"
        tools:layout_editor_absoluteY="81dp" />

    <Button
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/select_date"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="#B5B3B3" />

    <TextView
        android:id="@+id/tvSelectedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:text="@string/date"
        android:textColor="@color/purple_500"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="175dp"
        tools:layout_editor_absoluteY="81dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/selected_date"
        android:textColor="@color/black"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="175dp"
        tools:layout_editor_absoluteY="81dp" />

    <TextView
        android:id="@+id/convertedAgeToMinute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:text="minutes to  sec"
        android:textColor="@color/purple_500"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="175dp"
        tools:layout_editor_absoluteY="81dp" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="in minutes till date"
        android:textColor="@color/black"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="175dp"
        tools:layout_editor_absoluteY="81dp" />
</LinearLayout>